@@ -7319,6 +7319,18 @@ No match
  +0        ^     x
  +0         ^    x
 No match
+
+/(*NO_START_OPT)xyz/C
+  abcxyz 
+--->abcxyz
++15 ^          x
++15  ^         x
++15   ^        x
++15    ^       x
++16    ^^      y
++17    ^ ^     z
++18    ^  ^    
+ 0: xyz
   
 /(?C)ab/
   ab
